# dallas

./: .env.example  .gitignore  :  AGENTS.md  Anchor.toml  LOOP.md  README.md  ROADMAP.md  create_token_mint.js  index.html  jest.config.js  jest.setup.shim.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vercel.json  vite.config.ts
.husky/: pre-commit
.intent/: config.json
api/: agents.ts  bags.ts  events.ts  kv.ts  optimization-log.ts  results.ts  stellar-attestations.ts  stellar-prove.ts  tasks.ts  test.ts  validations.ts  validators.ts
docs/: 0_GETTING_STARTED.md  1_OVERVIEW.md  2_ARCHITECTURE.md  3_PRIVACY.md  4_TOKENOMICS.md  5_DEPLOYMENT.md  6_MULTICHAIN_ROADMAP.md  6_READINESS_SCORECARD.md  ANDROID_TESTING.md  ARCHITECTURE.md  BLOCKCHAIN_INTEGRATION.md  DEMO_VIDEO_SCRIPT.md  DEPLOYMENT.md  DEPLOYMENTS.md  DEVELOPMENT.md  DIRECT_SETUP_GUIDE.md  MOCK_AUDIT.md  NOIR_INTEGRATION_SUMMARY.md  OVERVIEW.md  PILOT_CHECKLIST.md  PITCH_DECK.md  PLATFORM_ARCHITECTURE.md  PRIVACY_INTEGRATION_IMPROVEMENTS.md  PRIVACY_INTEGRATION_ROADMAP.md  PRIVACY_INTEGRATION_SUMMARY.md  PRIVACY_USER_FLOWS.md  SETUP.md  SOLANA_SETUP.md  STATUS.md  STRATEGY.md  TESTING.md  TOKEN_INTEGRATION.md  agent-alliance-skill.md
mobile/: .gitignore  .pnpm-build-approvals.json  (+6 more)
programs/membership/: Cargo.toml  client.ts
programs/membership/src/: lib.rs
programs/stellar_verifier/: Cargo.toml
programs/stellar_verifier/.cargo/: config.toml
programs/stellar_verifier/src/: lib.rs
programs/treasury/: Cargo.toml  client.ts
programs/treasury/src/: lib.rs
(+289 files in other folders)
