[package]
name = "membership"
version = "0.1.0"
description = "Dallas Buyers Club Membership Program - NFT-based membership"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "membership"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
dbc-common = { path = "../common" }
