[package]
name = "dbc-treasury"
version = "0.1.0"
description = "Dallas Buyers Club Treasury Program - Community-owned DBC token management"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "dbc_treasury"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.29.0", features = ["token_2022"] }
